/*!
# High-Performance Graph Layout Engine

Rust-based –º–∏–∫—Ä–æ—Å–µ—Ä–≤–∏—Å –¥–ª—è –≤—ã—Å–æ–∫–æ–ø—Ä–æ–∏–∑–≤–æ–¥–∏—Ç–µ–ª—å–Ω–æ–π —É–∫–ª–∞–¥–∫–∏ –≥—Ä–∞—Ñ–æ–≤,
–∑–∞–º–µ–Ω—è—é—â–∏–π Python + Neo4j —Ä–µ—à–µ–Ω–∏–µ —Å —É–ª—É—á—à–µ–Ω–Ω–æ–π Big O –Ω–æ—Ç–∞—Ü–∏–µ–π.

## –ö–ª—é—á–µ–≤—ã–µ –æ—Å–æ–±–µ–Ω–Ω–æ—Å—Ç–∏

- **gRPC API** –¥–ª—è –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏ —Å –º–∏–∫—Ä–æ—Å–µ—Ä–≤–∏—Å–∞–º–∏
- **SIMD –æ–ø—Ç–∏–º–∏–∑–∞—Ü–∏–∏** –¥–ª—è –≤–µ–∫—Ç–æ—Ä–Ω—ã—Ö –æ–ø–µ—Ä–∞—Ü–∏–π  
- **–ú–Ω–æ–≥–æ–ø–æ—Ç–æ—á–Ω–∞—è –æ–±—Ä–∞–±–æ—Ç–∫–∞** —Å Rayon
- **–≠—Ñ—Ñ–µ–∫—Ç–∏–≤–Ω–æ–µ —É–ø—Ä–∞–≤–ª–µ–Ω–∏–µ –ø–∞–º—è—Ç—å—é** —Å —á–∞–Ω–∫–∞–º–∏/–±–∞—Ç—á–∞–º–∏
- **–ü–æ—Ç–æ–∫–æ–≤–∞—è –æ–±—Ä–∞–±–æ—Ç–∫–∞** –±–æ–ª—å—à–∏—Ö –≥—Ä–∞—Ñ–æ–≤
- **–ú–∏–Ω–∏–º–∞–ª—å–Ω—ã–π —Ç—Ä–∞—Ñ–∏–∫** - —Ç–æ–ª—å–∫–æ —Å–≤—è–∑–∏ —Ç—É–¥–∞, —Ç–æ–ª—å–∫–æ —Ä–µ–∑—É–ª—å—Ç–∞—Ç—ã –æ–±—Ä–∞—Ç–Ω–æ

## –ê—Ä—Ö–∏—Ç–µ–∫—Ç—É—Ä–∞ –∞–ª–≥–æ—Ä–∏—Ç–º–æ–≤

- –¢–æ–ø–æ–ª–æ–≥–∏—á–µ—Å–∫–∞—è —Å–æ—Ä—Ç–∏—Ä–æ–≤–∫–∞: O(V + E) ‚Üí O((V + E) / P) —Å –ø–∞—Ä–∞–ª–ª–µ–ª–∏–∑–º–æ–º
- Longest Path: O(V¬≤) ‚Üí O(V log V) —Å SIMD
- –†–∞–∑–º–µ—â–µ–Ω–∏–µ –≤–µ—Ä—à–∏–Ω: O(V¬≤) ‚Üí O(V) —Å —ç—Ñ—Ñ–µ–∫—Ç–∏–≤–Ω—ã–º–∏ —Å—Ç—Ä—É–∫—Ç—É—Ä–∞–º–∏ –¥–∞–Ω–Ω—ã—Ö

*/
#![allow(dead_code)]

use std::net::SocketAddr;

use anyhow::Result;
use clap::Parser;
use tonic::transport::Server;
use tracing::{info, warn, error};
use tracing_subscriber::{layer::SubscriberExt, util::SubscriberInitExt, Layer};

mod config;
mod algorithms;
mod data_structures;
mod db_optimizer;
mod memory;
mod metrics;
mod neo4j;
mod server;

// –ü–æ–¥–∫–ª—é—á–∞–µ–º —Å–≥–µ–Ω–µ—Ä–∏—Ä–æ–≤–∞–Ω–Ω—ã–µ protobuf —Ç–∏–ø—ã
pub mod generated {
    #![allow(clippy::derive_partial_eq_without_eq)]
    tonic::include_proto!("graph_layout");
}

use crate::config::Config;
use crate::db_optimizer::DatabaseOptimizer;
use crate::server::GraphLayoutServer;

#[cfg(feature = "mimalloc")]
#[global_allocator]
static GLOBAL: mimalloc::MiMalloc = mimalloc::MiMalloc;

#[cfg(feature = "jemalloc")]
#[global_allocator]
static GLOBAL: jemallocator::Jemalloc = jemallocator::Jemalloc;

/// –ê—Ä–≥—É–º–µ–Ω—Ç—ã –∫–æ–º–∞–Ω–¥–Ω–æ–π —Å—Ç—Ä–æ–∫–∏
#[derive(Parser, Debug)]
#[command(name = "graph-layout-engine")]
#[command(about = "High-performance graph layout engine")]
#[command(version)]
struct Args {
    /// –ü—É—Ç—å –∫ —Ñ–∞–π–ª—É –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏
    #[arg(short, long, default_value = "config.toml")]
    config: String,
    
    /// –ê–¥—Ä–µ—Å –¥–ª—è –ø—Ä–∏–≤—è–∑–∫–∏ gRPC —Å–µ—Ä–≤–µ—Ä–∞
    #[arg(short, long, default_value = "0.0.0.0:50051")]
    address: String,
    
    /// –£—Ä–æ–≤–µ–Ω—å –ª–æ–≥–∏—Ä–æ–≤–∞–Ω–∏—è
    #[arg(short, long, default_value = "info")]
    log_level: String,
    
    /// –í–∫–ª—é—á–∏—Ç—å –ø—Ä–æ—Ñ–∏–ª–∏—Ä–æ–≤–∞–Ω–∏–µ
    #[arg(long)]
    enable_profiling: bool,
    
    /// –†–µ–∂–∏–º —Ä–∞–±–æ—Ç—ã
    #[arg(short, long, default_value = "auto-layout")]
    mode: ServerMode,
}

#[derive(Debug, Clone, clap::ValueEnum)]
enum ServerMode {
    /// –†–µ–∂–∏–º gRPC —Å–µ—Ä–≤–µ—Ä–∞
    Server,
    /// –ê–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∞—è —É–∫–ª–∞–¥–∫–∞ –≥—Ä–∞—Ñ–∞
    AutoLayout,
    /// –†–µ–∂–∏–º –ø—Ä–æ–≤–µ—Ä–∫–∏ –∑–¥–æ—Ä–æ–≤—å—è
    Health,
    /// –†–µ–∂–∏–º –±–µ–Ω—á–º–∞—Ä–∫–æ–≤
    Benchmark,
    /// –†–µ–∂–∏–º —Ç–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏—è
    Test,
}

#[tokio::main]
async fn main() -> Result<()> {
    let args = Args::parse();
    
    // –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è –ª–æ–≥–∏—Ä–æ–≤–∞–Ω–∏—è
    init_logging(&args.log_level)?;
    
    info!(
        "ü¶Ä –ó–∞–ø—É—Å–∫ Graph Layout Engine v{}", 
        env!("CARGO_PKG_VERSION")
    );
    
    // –ó–∞–≥—Ä—É–∑–∫–∞ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏
    let config = match Config::load(&args.config) {
        Ok(config) => {
            info!("üìã –ö–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—è –∑–∞–≥—Ä—É–∂–µ–Ω–∞ –∏–∑ {}", args.config);
            config
        },
        Err(e) => {
            error!("‚ùå –û—à–∏–±–∫–∞ –∑–∞–≥—Ä—É–∑–∫–∏ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏: {}", e);
            return Err(e);
        }
    };
    
    // –í—ã–±–æ—Ä —Ä–µ–∂–∏–º–∞ —Ä–∞–±–æ—Ç—ã
    info!("üéØ –†–µ–∂–∏–º —Ä–∞–±–æ—Ç—ã: {:?}", args.mode);
    match args.mode {
        ServerMode::Server => {
            info!("üöÄ –ó–∞–ø—É—Å–∫ –≤ —Ä–µ–∂–∏–º–µ gRPC —Å–µ—Ä–≤–µ—Ä–∞");
            run_server(args.address, config).await?;
        },
        ServerMode::AutoLayout => {
            info!("üßÆ –ó–∞–ø—É—Å–∫ –≤ —Ä–µ–∂–∏–º–µ –∞–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–æ–π —É–∫–ª–∞–¥–∫–∏");
            run_auto_layout(config).await?;
        },
        ServerMode::Health => {
            info!("üè• –ó–∞–ø—É—Å–∫ –ø—Ä–æ–≤–µ—Ä–∫–∏ –∑–¥–æ—Ä–æ–≤—å—è");
            run_health_check().await?;
        },
        ServerMode::Benchmark => {
            info!("üìä –ó–∞–ø—É—Å–∫ –±–µ–Ω—á–º–∞—Ä–∫–æ–≤");
            run_benchmarks().await?;
        },
        ServerMode::Test => {
            info!("üß™ –ó–∞–ø—É—Å–∫ —Ç–µ—Å—Ç–æ–≤ —É–∫–ª–∞–¥–∫–∏");
            run_tests().await?;
        },
    }
    
    info!("‚úÖ –ü—Ä–æ–≥—Ä–∞–º–º–∞ –∑–∞–≤–µ—Ä—à–µ–Ω–∞ —É—Å–ø–µ—à–Ω–æ");
    Ok(())
}

/// –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è —Å–∏—Å—Ç–µ–º—ã –ª–æ–≥–∏—Ä–æ–≤–∞–Ω–∏—è
fn init_logging(level: &str) -> Result<()> {
    let level = level.parse::<tracing::Level>()
        .map_err(|e| anyhow::anyhow!("–ù–µ–≤–µ—Ä–Ω—ã–π —É—Ä–æ–≤–µ–Ω—å –ª–æ–≥–∏—Ä–æ–≤–∞–Ω–∏—è: {}", e))?;
    
    // –°–æ–∑–¥–∞—ë–º –¥–∏—Ä–µ–∫—Ç–æ—Ä–∏—é –¥–ª—è –ª–æ–≥–æ–≤ –µ—Å–ª–∏ –µ—ë –Ω–µ—Ç
    std::fs::create_dir_all("logs")
        .map_err(|e| anyhow::anyhow!("–ù–µ —É–¥–∞–ª–æ—Å—å —Å–æ–∑–¥–∞—Ç—å –¥–∏—Ä–µ–∫—Ç–æ—Ä–∏—é logs: {}", e))?;
    
    // –°–æ–∑–¥–∞–µ–º —Ñ–∏–ª—å—Ç—Ä –∫–æ—Ç–æ—Ä—ã–π –ø—Ä–æ–ø—É—Å–∫–∞–µ—Ç –≤—Å–µ –ª–æ–≥–∏ –Ω—É–∂–Ω–æ–≥–æ —É—Ä–æ–≤–Ω—è
    let env_filter = tracing_subscriber::EnvFilter::try_from_default_env()
        .unwrap_or_else(|_| {
            // –ò—Å–ø–æ–ª—å–∑—É–µ–º —à–∏—Ä–æ–∫–∏–π —Ñ–∏–ª—å—Ç—Ä –¥–ª—è –≤—Å–µ—Ö –º–æ–¥—É–ª–µ–π
            tracing_subscriber::EnvFilter::new(level.to_string())
        });
    
    // –ò—Å–ø–æ–ª—å–∑—É–µ–º rolling file appender –¥–ª—è —Ñ–∞–π–ª–æ–≤–æ–≥–æ –ª–æ–≥–∏—Ä–æ–≤–∞–Ω–∏—è
    let file_appender = tracing_appender::rolling::never("logs", "rust_layout.log");
    let error_appender = tracing_appender::rolling::never("logs", "rust_layout_error.log");
    
    // –°–ª–æ–π –¥–ª—è –∫–æ–Ω—Å–æ–ª–∏
    let stdout_layer = tracing_subscriber::fmt::layer()
        .with_writer(std::io::stdout)
        .with_target(false)
        .with_ansi(false);
    
    // –°–ª–æ–π –¥–ª—è —Ñ–∞–π–ª–∞
    let file_layer = tracing_subscriber::fmt::layer()
        .with_writer(file_appender)
        .with_target(true)
        .with_ansi(false);
    
    // –°–ª–æ–π –¥–ª—è –æ—à–∏–±–æ–∫
    let error_layer = tracing_subscriber::fmt::layer()
        .with_writer(error_appender)
        .with_target(true)
        .with_ansi(false)
        .with_filter(tracing_subscriber::filter::LevelFilter::ERROR);
    
    // –°–æ–±–∏—Ä–∞–µ–º –≤—Å–µ –≤–º–µ—Å—Ç–µ
    tracing_subscriber::registry()
        .with(env_filter)
        .with(stdout_layer)
        .with(file_layer)
        .with(error_layer)
        .init();
    
    Ok(())
}

/// –ê–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∞—è —É–∫–ª–∞–¥–∫–∞ –≥—Ä–∞—Ñ–∞
async fn run_auto_layout(config: Config) -> Result<()> {
    info!("üîÑ –ó–∞–ø—É—Å–∫ –∞–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–æ–π —É–∫–ª–∞–¥–∫–∏ –≥—Ä–∞—Ñ–∞...");

    // –°–æ–∑–¥–∞–Ω–∏–µ —Å–µ—Ä–≤–∏—Å–∞ —É–∫–ª–∞–¥–∫–∏ –≥—Ä–∞—Ñ–æ–≤
    info!("üîß –°–æ–∑–¥–∞–Ω–∏–µ GraphLayoutServer...");
    let layout_service = match GraphLayoutServer::new(config.clone()).await {
        Ok(service) => {
            info!("‚úÖ GraphLayoutServer —Å–æ–∑–¥–∞–Ω —É—Å–ø–µ—à–Ω–æ");
            service
        },
        Err(e) => {
            error!("‚ùå –û—à–∏–±–∫–∞ —Å–æ–∑–¥–∞–Ω–∏—è GraphLayoutServer: {}", e);
            return Err(e);
        }
    };

    // –ü–æ–¥–≥–æ—Ç–æ–≤–∫–∞ –±–∞–∑—ã –¥–∞–Ω–Ω—ã—Ö: –ø—Ä–æ–≤–µ—Ä–∫–∞ –∏ —Å–æ–∑–¥–∞–Ω–∏–µ –∏–Ω–¥–µ–∫—Å–æ–≤
    info!("üîß –ü–æ–¥–≥–æ—Ç–æ–≤–∫–∞ –±–∞–∑—ã –¥–∞–Ω–Ω—ã—Ö...");
    let db_optimizer = DatabaseOptimizer::new(layout_service.neo4j_client.graph());
    match db_optimizer.prepare_database().await {
        Ok(_) => {
            info!("‚úÖ –ë–∞–∑–∞ –¥–∞–Ω–Ω—ã—Ö –ø–æ–¥–≥–æ—Ç–æ–≤–ª–µ–Ω–∞");
        },
        Err(e) => {
            warn!("‚ö†Ô∏è –û—à–∏–±–∫–∞ –ø–æ–¥–≥–æ—Ç–æ–≤–∫–∏ –±–∞–∑—ã –¥–∞–Ω–Ω—ã—Ö: {}. –ü—Ä–æ–¥–æ–ª–∂–∞–µ–º –±–µ–∑ –æ–ø—Ç–∏–º–∏–∑–∞—Ü–∏–π.", e);
        }
    }
    
    info!("üßÆ –ù–∞—á–∏–Ω–∞–µ–º –±–∞—Ç—á–µ–≤—É—é –æ–±—Ä–∞–±–æ—Ç–∫—É...");
    // –ë–∞—Ç—á–µ–≤–∞—è –æ–±—Ä–∞–±–æ—Ç–∫–∞
    match run_batch_layout(&layout_service, &config).await {
        Ok(_) => {
            info!("‚úÖ –ë–∞—Ç—á–µ–≤–∞—è –æ–±—Ä–∞–±–æ—Ç–∫–∞ –∑–∞–≤–µ—Ä—à–µ–Ω–∞ —É—Å–ø–µ—à–Ω–æ");
            Ok(())
        },
        Err(e) => {
            error!("‚ùå –û—à–∏–±–∫–∞ –±–∞—Ç—á–µ–≤–æ–π –æ–±—Ä–∞–±–æ—Ç–∫–∏: {}", e);
            Err(e)
        }
    }
}

/// –ë–∞—Ç—á–µ–≤–∞—è –æ–±—Ä–∞–±–æ—Ç–∫–∞ –≥—Ä–∞—Ñ–∞ —Å –≥–ª–æ–±–∞–ª—å–Ω—ã–º –Ω–∞–∑–Ω–∞—á–µ–Ω–∏–µ–º —Å–ª–æ—ë–≤
async fn run_batch_layout(layout_service: &GraphLayoutServer, config: &Config) -> Result<()> {
    use tracing::info;
    use crate::algorithms::vertex_placement::{GlobalLayerState, PlacementConfig};

    info!("=== –ë–ê–¢–ß–ï–í–ê–Ø –û–ë–†–ê–ë–û–¢–ö–ê –° –ì–õ–û–ë–ê–õ–¨–ù–´–ú –ù–ê–ó–ù–ê–ß–ï–ù–ò–ï–ú –°–õ–û–Å–í ===");
    info!("üìä –ó–∞–≥—Ä—É–∑–∫–∞ –¥–∞–Ω–Ω—ã—Ö –≥—Ä–∞—Ñ–∞ –∏–∑ Neo4j...");

    // –ü–æ–ª—É—á–∞–µ–º –æ–±—â–µ–µ –∫–æ–ª–∏—á–µ—Å—Ç–≤–æ —Å–≤—è–∑–µ–π
    let total_edges = layout_service.neo4j_client.get_total_edges_count().await?;
    info!("üìà –í—Å–µ–≥–æ —Å–≤—è–∑–µ–π –≤ –ë–î: {}", total_edges);

    // –û–ø—Ä–µ–¥–µ–ª—è–µ–º —Ä–∞–∑–º–µ—Ä –±–∞—Ç—á–∞ –∏–∑ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏
    let batch_size = config.neo4j.batch_size;
    let total_batches = (total_edges + batch_size - 1) / batch_size;

    info!("üîÑ –ë—É–¥–µ—Ç –∑–∞–≥—Ä—É–∂–µ–Ω–æ {} –±–∞—Ç—á–µ–π –ø–æ {} —Å–≤—è–∑–µ–π", total_batches, batch_size);

    // –§–∞–∑–∞ 1: –ì–ª–æ–±–∞–ª—å–Ω–æ–µ –Ω–∞–∑–Ω–∞—á–µ–Ω–∏–µ —Å–ª–æ—ë–≤
    info!("=== –§–ê–ó–ê 1: –ì–õ–û–ë–ê–õ–¨–ù–û–ï –ù–ê–ó–ù–ê–ß–ï–ù–ò–ï –°–õ–û–Å–í ===");
    let mut global_state = GlobalLayerState::new();

    for batch_num in 0..total_batches {
        let offset = batch_num * batch_size;
        info!("üì• –ó–∞–≥—Ä—É–∑–∫–∞ –±–∞—Ç—á–∞ {}/{} (offset={})", batch_num + 1, total_batches, offset);

        let batch_edges = layout_service.neo4j_client.load_graph_edges_batch(batch_size, offset).await?;

        // –ö–æ–Ω–≤–µ—Ä—Ç–∏—Ä—É–µ–º –≤ —Ñ–æ—Ä–º–∞—Ç (source, target)
        // –ù–∞–ø—Ä–∞–≤–ª–µ–Ω–∏–µ —Å–æ—Ö—Ä–∞–Ω—è–µ—Ç—Å—è –∫–∞–∫ –µ—Å—Ç—å –∏–∑ Neo4j
        let edge_tuples: Vec<(String, String)> = batch_edges
            .into_iter()
            .map(|e| (e.source_id, e.target_id))
            .collect();

        info!("üìä –î–æ–±–∞–≤–ª–µ–Ω–∏–µ {} —Å–≤—è–∑–µ–π –≤ –≥–ª–æ–±–∞–ª—å–Ω–æ–µ —Å–æ—Å—Ç–æ—è–Ω–∏–µ", edge_tuples.len());
        global_state.add_edges_batch(&edge_tuples)?;

        // –û–±–Ω–æ–≤–ª—è–µ–º —Å–ª–æ–∏ –ø–æ—Å–ª–µ –∫–∞–∂–¥–æ–≥–æ –±–∞—Ç—á–∞
        info!("üîÑ –û–±–Ω–æ–≤–ª–µ–Ω–∏–µ —Å–ª–æ—ë–≤ –ø–æ—Å–ª–µ –¥–æ–±–∞–≤–ª–µ–Ω–∏—è –±–∞—Ç—á–∞");
        let updates = global_state.propagate_until_convergence()?;

        let progress = ((batch_num + 1) as f64 / total_batches as f64) * 100.0;
        info!("üìä –ü—Ä–æ–≥—Ä–µ—Å—Å: {:.1}% ({}/{} –±–∞—Ç—á–µ–π), {} –æ–±–Ω–æ–≤–ª–µ–Ω–∏–π —Å–ª–æ—ë–≤",
              progress, batch_num + 1, total_batches, updates);

        // –ü–µ—Ä–∏–æ–¥–∏—á–µ—Å–∫–∏ –≤—ã–≤–æ–¥–∏–º —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫—É
        if (batch_num + 1) % 10 == 0 || batch_num == total_batches - 1 {
            global_state.log_statistics();
        }
    }

    info!("=== –§–ê–ó–ê 1 –ó–ê–í–ï–†–®–ï–ù–ê ===");
    global_state.log_statistics();

    // –í–∞–ª–∏–¥–∞—Ü–∏—è —Å–ª–æ—ë–≤
    info!("üîç –í–∞–ª–∏–¥–∞—Ü–∏—è –Ω–∞–∑–Ω–∞—á–µ–Ω–Ω—ã—Ö —Å–ª–æ—ë–≤...");
    let invalid_edges = global_state.validate_layers();
    if invalid_edges > 0 {
        info!("‚ö†Ô∏è –û–±–Ω–∞—Ä—É–∂–µ–Ω–æ {} –Ω–µ–≤–∞–ª–∏–¥–Ω—ã—Ö —Å–≤—è–∑–µ–π (–≤–æ–∑–º–æ–∂–Ω–æ, —Ü–∏–∫–ª—ã)", invalid_edges);
    }

    // –§–∞–∑–∞ 2: –†–∞–∑–º–µ—â–µ–Ω–∏–µ –≤–µ—Ä—à–∏–Ω –ø–æ –∫–æ–æ—Ä–¥–∏–Ω–∞—Ç–∞–º
    info!("=== –§–ê–ó–ê 2: –†–ê–ó–ú–ï–©–ï–ù–ò–ï –í–ï–†–®–ò–ù –ü–û –ö–û–û–†–î–ò–ù–ê–¢–ê–ú ===");
    let layer_map = global_state.get_layer_map();

    let placement_config = PlacementConfig {
        block_width: config.algorithms.block_width,
        block_height: config.algorithms.block_height,
        horizontal_gap: config.algorithms.horizontal_gap,
        vertical_gap: config.algorithms.vertical_gap,
    };

    info!("üìç –†–∞–∑–º–µ—â–µ–Ω–∏–µ {} –≤–µ—Ä—à–∏–Ω –Ω–∞ –æ—Å–Ω–æ–≤–µ –≥–ª–æ–±–∞–ª—å–Ω—ã—Ö —Å–ª–æ—ë–≤", layer_map.len());
    let positions = crate::algorithms::vertex_placement::place_all_vertices(
        layer_map,
        &placement_config,
    );

    // –ö–æ–Ω–≤–µ—Ä—Ç–∏—Ä—É–µ–º –≤ —Ñ–æ—Ä–º–∞—Ç Neo4j
    let neo4j_positions: Vec<crate::neo4j::VertexPosition> = positions
        .into_iter()
        .map(|p| crate::neo4j::VertexPosition {
            article_id: p.vertex_id,
            layer: p.layer,
            level: p.level,
            x: p.x,
            y: p.y,
        })
        .collect();

    info!("üìä –ü–æ–¥–≥–æ—Ç–æ–≤–ª–µ–Ω–æ {} –ø–æ–∑–∏—Ü–∏–π –¥–ª—è —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è", neo4j_positions.len());

    // –§–∞–∑–∞ 3: –°–æ—Ö—Ä–∞–Ω–µ–Ω–∏–µ —Ä–µ–∑—É–ª—å—Ç–∞—Ç–æ–≤
    info!("=== –§–ê–ó–ê 3: –°–û–•–†–ê–ù–ï–ù–ò–ï –†–ï–ó–£–õ–¨–¢–ê–¢–û–í –í NEO4J ===");
    layout_service.neo4j_client.save_layout_results_with_batch_size(
        &neo4j_positions,
        config.neo4j.save_batch_size
    ).await?;

    info!("‚úÖ –†–µ–∑—É–ª—å—Ç–∞—Ç—ã —É—Å–ø–µ—à–Ω–æ —Å–æ—Ö—Ä–∞–Ω–µ–Ω—ã –≤ Neo4j");
    info!("=== –í–°–ï –§–ê–ó–´ –ó–ê–í–ï–†–®–ï–ù–´ –£–°–ü–ï–®–ù–û ===");

    Ok(())
}


/// –ó–∞–ø—É—Å–∫ gRPC —Å–µ—Ä–≤–µ—Ä–∞
async fn run_server(address: String, config: Config) -> Result<()> {
    let addr: SocketAddr = address.parse()
        .map_err(|e| anyhow::anyhow!("–ù–µ–≤–µ—Ä–Ω—ã–π –∞–¥—Ä–µ—Å {}: {}", address, e))?;
    
    info!("üöÄ –ó–∞–ø—É—Å–∫ gRPC —Å–µ—Ä–≤–µ—Ä–∞ –Ω–∞ {}", addr);
    
    // –°–æ–∑–¥–∞–Ω–∏–µ —Å–µ—Ä–≤–∏—Å–∞ —É–∫–ª–∞–¥–∫–∏ –≥—Ä–∞—Ñ–æ–≤
    let layout_service = GraphLayoutServer::new(config).await?;
    
    // –î–æ–±–∞–≤–ª–µ–Ω–∏–µ middleware –¥–ª—è –º–µ—Ç—Ä–∏–∫ –∏ –ª–æ–≥–∏—Ä–æ–≤–∞–Ω–∏—è
    let service = tower::ServiceBuilder::new()
        // .layer(tower_http::trace::TraceLayer::new_for_grpc()) // –£–ø—Ä–æ—â–µ–Ω–æ –¥–ª—è —Å–æ–≤–º–µ—Å—Ç–∏–º–æ—Å—Ç–∏
        .service(generated::graph_layout_service_server::GraphLayoutServiceServer::new(layout_service));
    
    // –ó–∞–ø—É—Å–∫ —Å–µ—Ä–≤–µ—Ä–∞
    Server::builder()
        .add_service(service)
        .serve(addr)
        .await
        .map_err(|e| anyhow::anyhow!("–û—à–∏–±–∫–∞ —Å–µ—Ä–≤–µ—Ä–∞: {}", e))?;
    
    Ok(())
}

/// –ü—Ä–æ–≤–µ—Ä–∫–∞ –∑–¥–æ—Ä–æ–≤—å—è —Å–µ—Ä–≤–∏—Å–∞
async fn run_health_check() -> Result<()> {
    info!("üè• –í—ã–ø–æ–ª–Ω–µ–Ω–∏–µ –ø—Ä–æ–≤–µ—Ä–∫–∏ –∑–¥–æ—Ä–æ–≤—å—è...");
    
    // –ü—Ä–æ–≤–µ—Ä–∫–∞ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è –∫ Neo4j
    // –ü—Ä–æ–≤–µ—Ä–∫–∞ –¥–æ—Å—Ç—É–ø–Ω–æ—Å—Ç–∏ –ø–∞–º—è—Ç–∏
    // –ü—Ä–æ–≤–µ—Ä–∫–∞ –ø—Ä–æ–∏–∑–≤–æ–¥–∏—Ç–µ–ª—å–Ω–æ—Å—Ç–∏
    
    println!("‚úÖ –í—Å–µ –ø—Ä–æ–≤–µ—Ä–∫–∏ –ø—Ä–æ–π–¥–µ–Ω—ã —É—Å–ø–µ—à–Ω–æ");
    Ok(())
}

/// –ó–∞–ø—É—Å–∫ –±–µ–Ω—á–º–∞—Ä–∫–æ–≤
async fn run_benchmarks() -> Result<()> {
    info!("üìä –ó–∞–ø—É—Å–∫ –±–µ–Ω—á–º–∞—Ä–∫–æ–≤ –ø—Ä–æ–∏–∑–≤–æ–¥–∏—Ç–µ–ª—å–Ω–æ—Å—Ç–∏...");
    
    // –ë–µ–Ω—á–º–∞—Ä–∫ —Ç–æ–ø–æ–ª–æ–≥–∏—á–µ—Å–∫–æ–π —Å–æ—Ä—Ç–∏—Ä–æ–≤–∫–∏
    // –ë–µ–Ω—á–º–∞—Ä–∫ longest path –∞–ª–≥–æ—Ä–∏—Ç–º–∞
    // –ë–µ–Ω—á–º–∞—Ä–∫ —Ä–∞–∑–º–µ—â–µ–Ω–∏—è –≤–µ—Ä—à–∏–Ω
    // –°—Ä–∞–≤–Ω–µ–Ω–∏–µ —Å Python —Ä–µ–∞–ª–∏–∑–∞—Ü–∏–µ–π
    
    println!("üìà –ë–µ–Ω—á–º–∞—Ä–∫–∏ –∑–∞–≤–µ—Ä—à–µ–Ω—ã");
    Ok(())
}

/// –ó–∞–ø—É—Å–∫ —Ç–µ—Å—Ç–æ–≤
async fn run_tests() -> Result<()> {
    info!("üß™ –ó–∞–ø—É—Å–∫ —Ç–µ—Å—Ç–æ–≤ –∫–æ—Ä—Ä–µ–∫—Ç–Ω–æ—Å—Ç–∏ —É–∫–ª–∞–¥–∫–∏ –≥—Ä–∞—Ñ–∞...");
    println!();

    // –ü—É—Ç—å –∫ —Ç–µ—Å—Ç–æ–≤–æ–º—É GML —Ñ–∞–π–ª—É
    let gml_path = "tests/artifacts/test_graph.gml";

    if std::path::Path::new(gml_path).exists() {
        println!("=== –¢–ï–°–¢ 1: –£–∫–ª–∞–¥–∫–∞ –∏–∑ GML —Ñ–∞–π–ª–∞ ===\n");
        graph_layout_engine::test_layout::test_layout_from_gml(gml_path)?;
        println!("\n{}\n", "=".repeat(60));
    } else {
        println!("‚ö†Ô∏è GML —Ñ–∞–π–ª –Ω–µ –Ω–∞–π–¥–µ–Ω: {}", gml_path);
        println!("‚ö†Ô∏è –ó–∞–ø—É—Å–∫ —Ç–µ—Å—Ç–∞ –Ω–∞ –≤—Å—Ç—Ä–æ–µ–Ω–Ω–æ–º –≥—Ä–∞—Ñ–µ –≤–º–µ—Å—Ç–æ —ç—Ç–æ–≥–æ\n");

        println!("=== –¢–ï–°–¢ 1: –£–∫–ª–∞–¥–∫–∞ –≤—Å—Ç—Ä–æ–µ–Ω–Ω–æ–≥–æ —Ç–µ—Å—Ç–æ–≤–æ–≥–æ –≥—Ä–∞—Ñ–∞ ===\n");
        graph_layout_engine::test_layout::test_layout()?;
        println!("\n{}\n", "=".repeat(60));
    }

    println!("‚úÖ –í—Å–µ —Ç–µ—Å—Ç—ã —É—Å–ø–µ—à–Ω–æ –∑–∞–≤–µ—Ä—à–µ–Ω—ã\n");
    Ok(())
}
