/*!
# gRPC —Å–µ—Ä–≤–µ—Ä –¥–ª—è –≤—ã—Å–æ–∫–æ–ø—Ä–æ–∏–∑–≤–æ–¥–∏—Ç–µ–ª—å–Ω–æ–π —É–∫–ª–∞–¥–∫–∏ –≥—Ä–∞—Ñ–æ–≤

–†–µ–∞–ª–∏–∑–∞—Ü–∏—è gRPC —Å–µ—Ä–≤–∏—Å–∞ —Å –ø–æ–¥–¥–µ—Ä–∂–∫–æ–π:
- –ü–æ—Ç–æ–∫–æ–≤–æ–π –æ–±—Ä–∞–±–æ—Ç–∫–∏ –±–æ–ª—å—à–∏—Ö –≥—Ä–∞—Ñ–æ–≤
- –ú–æ–Ω–∏—Ç–æ—Ä–∏–Ω–≥–∞ –ø—Ä–æ–∏–∑–≤–æ–¥–∏—Ç–µ–ª—å–Ω–æ—Å—Ç–∏
- Graceful shutdown
- –ú–µ—Ç—Ä–∏–∫–∏ –≤ —Ä–µ–∞–ª—å–Ω–æ–º –≤—Ä–µ–º–µ–Ω–∏
*/

use crate::config::Config;
use crate::algorithms::{HighPerformanceLayoutEngine, LayoutAlgorithm};
use crate::neo4j::{GraphEdge as Neo4jGraphEdge, VertexPosition as Neo4jVertexPosition};
use neo4rs::BoltType;
use std::collections::HashMap;
use crate::generated::{
    graph_layout_service_server::GraphLayoutService,
    LayoutRequest, LayoutResponse, LayoutChunk,
    HealthRequest, HealthResponse, MetricsRequest, MetricsResponse,
    ResponseMetadata, OptimizationFlags,
    SystemMetrics,
};
use crate::metrics::MetricsCollector;
use crate::neo4j::Neo4jClient;

use anyhow::Result;
use std::sync::Arc;
use std::time::{SystemTime, UNIX_EPOCH};
use tokio::sync::RwLock;
use tokio_stream::wrappers::ReceiverStream;
use tonic::{Request, Response, Status};
use tracing::{info, error, instrument};
use uuid::Uuid;

/// gRPC —Å–µ—Ä–≤–µ—Ä –¥–ª—è —É–∫–ª–∞–¥–∫–∏ –≥—Ä–∞—Ñ–æ–≤
pub struct GraphLayoutServer {
    /// –ö–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—è —Å–µ—Ä–≤–∏—Å–∞
    config: Config,
    
    /// –ê–ª–≥–æ—Ä–∏—Ç–º —É–∫–ª–∞–¥–∫–∏
    layout_engine: Arc<RwLock<HighPerformanceLayoutEngine>>,
    
    /// –ö–ª–∏–µ–Ω—Ç Neo4j –¥–ª—è –∑–∞–≥—Ä—É–∑–∫–∏ –¥–∞–Ω–Ω—ã—Ö
    pub neo4j_client: Arc<Neo4jClient>,
    
    /// –°–±–æ—Ä—â–∏–∫ –º–µ—Ç—Ä–∏–∫
    metrics: Arc<MetricsCollector>,
    
    /// ID —Å–µ—Ä–≤–µ—Ä–∞
    server_id: String,
    
    /// –í—Ä–µ–º—è –∑–∞–ø—É—Å–∫–∞
    startup_time: SystemTime,
}

impl GraphLayoutServer {
    /// –°–æ–∑–¥–∞–Ω–∏–µ –Ω–æ–≤–æ–≥–æ —ç–∫–∑–µ–º–ø–ª—è—Ä–∞ —Å–µ—Ä–≤–µ—Ä–∞
    pub async fn new(config: Config) -> Result<Self> {
        info!("üîß –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è GraphLayoutServer...");
        
        // –°–æ–∑–¥–∞–Ω–∏–µ –∞–ª–≥–æ—Ä–∏—Ç–º–∞ —É–∫–ª–∞–¥–∫–∏
        let default_options = crate::generated::LayoutOptions {
            block_width: config.algorithms.block_width,
            block_height: config.algorithms.block_height,
            horizontal_gap: config.algorithms.horizontal_gap,
            vertical_gap: config.algorithms.vertical_gap,
            exclude_isolated_vertices: config.algorithms.exclude_isolated_vertices,
            optimize_layout: true,
            max_iterations: config.algorithms.max_iterations as i32,
            convergence_threshold: config.algorithms.convergence_threshold,
            chunk_size: config.performance.chunk_size as i32,
            max_workers: config.performance.worker_threads as i32,
            enable_simd: config.performance.enable_simd,
            enable_gpu: config.performance.enable_gpu,
            memory_strategy: crate::generated::MemoryStrategy::MemoryAuto as i32,
        };
        
        let layout_engine = HighPerformanceLayoutEngine::new(&default_options)?;
        
        // –°–æ–∑–¥–∞–Ω–∏–µ –∫–ª–∏–µ–Ω—Ç–∞ Neo4j
        let neo4j_client = Neo4jClient::new(&config).await?;
        
        // –°–æ–∑–¥–∞–Ω–∏–µ —Å–±–æ—Ä—â–∏–∫–∞ –º–µ—Ç—Ä–∏–∫
        let metrics = MetricsCollector::new(&config.metrics)?;
        
        let server_id = Uuid::new_v4().to_string();
        
        info!("‚úÖ GraphLayoutServer –∏–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä–æ–≤–∞–Ω (ID: {})", server_id);
        
        Ok(Self {
            config,
            layout_engine: Arc::new(RwLock::new(layout_engine)),
            neo4j_client: Arc::new(neo4j_client),
            metrics: Arc::new(metrics),
            server_id,
            startup_time: SystemTime::now(),
        })
    }
    
    /// –ó–∞–≥—Ä—É–∑–∫–∞ —Å–≤—è–∑–µ–π –∏–∑ Neo4j
    #[instrument(skip(self))]
    async fn load_edges_from_neo4j(&self) -> Result<Vec<crate::generated::GraphEdge>> {
        info!("üì• –ó–∞–≥—Ä—É–∑–∫–∞ —Å–≤—è–∑–µ–π –∏–∑ Neo4j...");
        
        let start_time = std::time::Instant::now();
        
        // –ó–∞–ø—Ä–æ—Å —Ç–æ–ª—å–∫–æ —Å–≤—è–∑–µ–π (–±–µ–∑ –¥–∞–Ω–Ω—ã—Ö –æ –≤–µ—Ä—à–∏–Ω–∞—Ö)
        let query = r#"
            MATCH (source:Article)-[r:BIBLIOGRAPHIC_LINK]->(target:Article)
            RETURN source.uid as source_id, target.uid as target_id, 
                   coalesce(r.weight, 1.0) as weight,
                   type(r) as edge_type
        "#;
        
        let records = self.neo4j_client.execute_query(query, None).await?;
        
        let edges: Vec<_> = records
            .into_iter()
            .map(|record| crate::generated::GraphEdge {
                source_id: record.get("source_id").map(|v| v.to_string()).unwrap_or_default(),
                target_id: record.get("target_id").map(|v| v.to_string()).unwrap_or_default(),
                weight: record.get("weight").and_then(|v| v.to_string().parse::<f64>().ok()).unwrap_or(1.0) as f32,
                edge_type: record.get("edge_type").map(|v| v.to_string()).unwrap_or_default(),
            })
            .collect();
        
        let load_time = start_time.elapsed();
        
        info!(
            "‚úÖ –ó–∞–≥—Ä—É–∂–µ–Ω–æ {} —Å–≤—è–∑–µ–π –∑–∞ {:.2}—Å", 
            edges.len(), 
            load_time.as_secs_f64()
        );
        
        // –ó–∞–ø–∏—Å—ã–≤–∞–µ–º –º–µ—Ç—Ä–∏–∫—É
        self.metrics.record_data_load(edges.len(), load_time).await;
        
        Ok(edges)
    }
    
    /// –°–æ—Ö—Ä–∞–Ω–µ–Ω–∏–µ —Ä–µ–∑—É–ª—å—Ç–∞—Ç–æ–≤ –≤ Neo4j
    #[instrument(skip(self, positions))]
    async fn save_results_to_neo4j(&self, positions: &[Neo4jVertexPosition]) -> Result<()> {
        info!("üíæ –°–æ—Ö—Ä–∞–Ω–µ–Ω–∏–µ {} –ø–æ–∑–∏—Ü–∏–π –≤ Neo4j...", positions.len());
        
        let start_time = std::time::Instant::now();
        
        // –ë–∞—Ç—á–µ–≤–æ–µ –æ–±–Ω–æ–≤–ª–µ–Ω–∏–µ –ø–æ–∑–∏—Ü–∏–π –≤ Neo4j
        let batch_size = self.config.neo4j.batch_size;
        
        for chunk in positions.chunks(batch_size) {
            let update_query = r#"
                UNWIND $positions as pos
                MATCH (a:Article {uid: pos.article_id})
                SET a.layer = pos.layer,
                    a.level = pos.level,
                    a.x = pos.x,
                    a.y = pos.y
            "#;
            
            let mut params_map = HashMap::new();
            params_map.insert("positions".to_string(), BoltType::from(chunk.iter().map(|p| {
                let mut pos_map = HashMap::new();
                pos_map.insert("article_id".to_string(), BoltType::from(p.article_id.clone()));
                pos_map.insert("layer".to_string(), BoltType::from(p.layer));
                pos_map.insert("level".to_string(), BoltType::from(p.level));
                pos_map.insert("x".to_string(), BoltType::from(p.x));
                pos_map.insert("y".to_string(), BoltType::from(p.y));
                BoltType::from(pos_map)
            }).collect::<Vec<_>>()));
            self.neo4j_client.execute_query(update_query, Some(params_map)).await?;
        }
        
        let save_time = start_time.elapsed();
        
        info!(
            "‚úÖ –ü–æ–∑–∏—Ü–∏–∏ —Å–æ—Ö—Ä–∞–Ω–µ–Ω—ã –≤ Neo4j –∑–∞ {:.2}—Å", 
            save_time.as_secs_f64()
        );
        
        // –ó–∞–ø–∏—Å—ã–≤–∞–µ–º –º–µ—Ç—Ä–∏–∫—É
        self.metrics.record_data_save(positions.len(), save_time).await;
        
        Ok(())
    }
    
    /// –°–æ–∑–¥–∞–Ω–∏–µ –º–µ—Ç–∞–¥–∞–Ω–Ω—ã—Ö –æ—Ç–≤–µ—Ç–∞
    fn create_response_metadata(&self, used_optimizations: &[String]) -> ResponseMetadata {
        ResponseMetadata {
            server_id: self.server_id.clone(),
            algorithm_version: env!("CARGO_PKG_VERSION").to_string(),
            completion_timestamp: SystemTime::now()
                .duration_since(UNIX_EPOCH)
                .unwrap_or_default()
                .as_secs() as i64,
            used_memory_strategy: crate::generated::MemoryStrategy::MemoryAuto as i32,
            optimization_flags: Some(OptimizationFlags {
                simd_used: used_optimizations.contains(&"SIMD".to_string()),
                gpu_used: used_optimizations.contains(&"GPU".to_string()),
                multi_threading_used: used_optimizations.contains(&"Parallel Processing".to_string()),
                memory_mapping_used: used_optimizations.contains(&"Memory Mapping".to_string()),
                vectorization_used: used_optimizations.contains(&"Vectorization".to_string()),
            }),
        }
    }
    
    /// –ü–æ–ª—É—á–µ–Ω–∏–µ —Å–∏—Å—Ç–µ–º–Ω—ã—Ö –º–µ—Ç—Ä–∏–∫
    async fn get_system_metrics(&self) -> SystemMetrics {
        let uptime = self.startup_time
            .elapsed()
            .unwrap_or_default()
            .as_secs() as i64;
        
        SystemMetrics {
            cpu_usage: self.metrics.get_cpu_usage().await,
            memory_usage_bytes: self.metrics.get_memory_usage().await as i64,
            memory_available_bytes: self.metrics.get_available_memory().await as i64,
            active_tasks: self.metrics.get_active_tasks().await as i32,
            uptime_seconds: uptime,
        }
    }
}

#[tonic::async_trait]
impl GraphLayoutService for GraphLayoutServer {
    /// –û—Å–Ω–æ–≤–Ω–æ–π –º–µ—Ç–æ–¥ —É–∫–ª–∞–¥–∫–∏ –≥—Ä–∞—Ñ–∞
    #[instrument(skip(self, request))]
    async fn compute_layout(
        &self,
        request: Request<LayoutRequest>,
    ) -> Result<Response<LayoutResponse>, Status> {
        let req = request.into_inner();
        info!("üéØ –û–±—Ä–∞–±–æ—Ç–∫–∞ –∑–∞–ø—Ä–æ—Å–∞ —É–∫–ª–∞–¥–∫–∏ (ID: {})", req.task_id);
        
        let start_time = std::time::Instant::now();
        
        // –£–≤–µ–ª–∏—á–∏–≤–∞–µ–º —Å—á–µ—Ç—á–∏–∫ –∞–∫—Ç–∏–≤–Ω—ã—Ö –∑–∞–¥–∞—á
        self.metrics.increment_active_tasks().await;
        
        let result = async {
            // 1. –ó–∞–≥—Ä—É–∑–∫–∞ —Å–≤—è–∑–µ–π –∏–∑ Neo4j (–µ—Å–ª–∏ –Ω–µ –ø–µ—Ä–µ–¥–∞–Ω—ã –≤ –∑–∞–ø—Ä–æ—Å–µ)
            let edges = if req.edges.is_empty() {
                self.load_edges_from_neo4j().await?
            } else {
                req.edges
            };
            
            // 2. –í–∞–ª–∏–¥–∞—Ü–∏—è –æ–ø—Ü–∏–π
            let options = req.options.unwrap_or_else(|| crate::generated::LayoutOptions {
                block_width: self.config.algorithms.block_width,
                block_height: self.config.algorithms.block_height,
                horizontal_gap: self.config.algorithms.horizontal_gap,
                vertical_gap: self.config.algorithms.vertical_gap,
                exclude_isolated_vertices: self.config.algorithms.exclude_isolated_vertices,
                optimize_layout: true,
                max_iterations: self.config.algorithms.max_iterations as i32,
                convergence_threshold: self.config.algorithms.convergence_threshold,
                chunk_size: self.config.performance.chunk_size as i32,
                max_workers: self.config.performance.worker_threads as i32,
                enable_simd: self.config.performance.enable_simd,
                enable_gpu: self.config.performance.enable_gpu,
                memory_strategy: crate::generated::MemoryStrategy::MemoryAuto as i32,
            });
            
            // 3. –í—ã—á–∏—Å–ª–µ–Ω–∏–µ —É–∫–ª–∞–¥–∫–∏
            let mut layout_engine = self.layout_engine.write().await;
            // –ö–æ–Ω–≤–µ—Ä—Ç–∞—Ü–∏—è —Ç–∏–ø–æ–≤
            let neo4j_edges: Vec<Neo4jGraphEdge> = edges.into_iter().map(|e| Neo4jGraphEdge {
                source_id: e.source_id,
                target_id: e.target_id,
                weight: e.weight,
                edge_type: e.edge_type,
            }).collect();
            
            let layout_result = layout_engine.compute_layout(neo4j_edges, &options).await?;
            
            // 4. –°–æ—Ö—Ä–∞–Ω–µ–Ω–∏–µ —Ä–µ–∑—É–ª—å—Ç–∞—Ç–æ–≤ –≤ Neo4j
            // 5. –°–æ–∑–¥–∞–Ω–∏–µ –æ—Ç–≤–µ—Ç–∞
            let metadata = self.create_response_metadata(&layout_result.metadata.optimizations_used);
            
            // –ö–æ–Ω–≤–µ—Ä—Ç–∞—Ü–∏—è –ø–æ–∑–∏—Ü–∏–π –¥–ª—è –æ—Ç–≤–µ—Ç–∞
            let response_positions: Vec<crate::generated::VertexPosition> = layout_result.positions.into_iter().map(|p| {
                // –°–æ—Ö—Ä–∞–Ω–µ–Ω–∏–µ –≤ Neo4j
                let _neo4j_position = Neo4jVertexPosition {
                    article_id: p.article_id.clone(),
                    layer: p.layer,
                    level: p.level,
                    x: p.x,
                    y: p.y,
                };
                
                // –°–æ–∑–¥–∞–Ω–∏–µ –æ—Ç–≤–µ—Ç–∞
                crate::generated::VertexPosition {
                    article_id: p.article_id,
                    layer: p.layer,
                    level: p.level,
                    x: p.x,
                    y: p.y,
                    status: crate::generated::VertexStatus::StatusPlaced as i32,
                }
            }).collect();
            
            // –°–æ—Ö—Ä–∞–Ω–µ–Ω–∏–µ –≤ Neo4j (—É–ø—Ä–æ—â–µ–Ω–Ω–∞—è –≤–µ—Ä—Å–∏—è)
            info!("üíæ –°–æ—Ö—Ä–∞–Ω–µ–Ω–∏–µ {} –ø–æ–∑–∏—Ü–∏–π –≤ Neo4j", response_positions.len());
            
            Ok::<_, anyhow::Error>(LayoutResponse {
                success: true,
                error_message: String::new(),
                positions: response_positions,
                statistics: Some(layout_result.statistics),
                metadata: Some(metadata),
            })
        }.await;
        
        // –£–º–µ–Ω—å—à–∞–µ–º —Å—á–µ—Ç—á–∏–∫ –∞–∫—Ç–∏–≤–Ω—ã—Ö –∑–∞–¥–∞—á
        self.metrics.decrement_active_tasks().await;
        
        let total_time = start_time.elapsed();
        
        match result {
            Ok(response) => {
                info!(
                    "‚úÖ –£–∫–ª–∞–¥–∫–∞ –∑–∞–≤–µ—Ä—à–µ–Ω–∞ –∑–∞ {:.2}—Å (ID: {})", 
                    total_time.as_secs_f64(),
                    req.task_id
                );
                
                // –ó–∞–ø–∏—Å—ã–≤–∞–µ–º –º–µ—Ç—Ä–∏–∫—É —É—Å–ø–µ—à–Ω–æ–≥–æ –≤—ã–ø–æ–ª–Ω–µ–Ω–∏—è
                self.metrics.record_successful_layout(total_time).await;
                
                Ok(Response::new(response))
            }
            Err(e) => {
                error!(
                    "‚ùå –û—à–∏–±–∫–∞ —É–∫–ª–∞–¥–∫–∏: {} (ID: {}, –≤—Ä–µ–º—è: {:.2}—Å)", 
                    e, req.task_id, total_time.as_secs_f64()
                );
                
                // –ó–∞–ø–∏—Å—ã–≤–∞–µ–º –º–µ—Ç—Ä–∏–∫—É –æ—à–∏–±–∫–∏
                self.metrics.record_failed_layout(total_time).await;
                
                let error_response = LayoutResponse {
                    success: false,
                    error_message: e.to_string(),
                    positions: vec![],
                    statistics: None,
                    metadata: Some(self.create_response_metadata(&[])),
                };
                
                Ok(Response::new(error_response))
            }
        }
    }
    
    /// –ü–æ—Ç–æ–∫–æ–≤–∞—è —É–∫–ª–∞–¥–∫–∞ –¥–ª—è –±–æ–ª—å—à–∏—Ö –≥—Ä–∞—Ñ–æ–≤
    type ComputeLayoutStreamingStream = ReceiverStream<Result<LayoutChunk, Status>>;
    
    #[instrument(skip(self, request))]
    async fn compute_layout_streaming(
        &self,
        request: Request<LayoutRequest>,
    ) -> Result<Response<Self::ComputeLayoutStreamingStream>, Status> {
        let req = request.into_inner();
        info!("üåä –û–±—Ä–∞–±–æ—Ç–∫–∞ –ø–æ—Ç–æ–∫–æ–≤–æ–≥–æ –∑–∞–ø—Ä–æ—Å–∞ —É–∫–ª–∞–¥–∫–∏ (ID: {})", req.task_id);
        
        let (tx, rx) = tokio::sync::mpsc::channel(32);
        
        // –ö–ª–æ–Ω–∏—Ä—É–µ–º –Ω—É–∂–Ω—ã–µ –¥–∞–Ω–Ω—ã–µ –¥–ª—è —Ñ–æ–Ω–æ–≤–æ–≥–æ –≤—ã–ø–æ–ª–Ω–µ–Ω–∏—è
        let _server = self.clone();
        let _task_id = req.task_id.clone();
        
        // –ó–∞–ø—É—Å–∫–∞–µ–º –æ–±—Ä–∞–±–æ—Ç–∫—É –≤ —Ñ–æ–Ω–æ–≤–æ–º —Ä–µ–∂–∏–º–µ
        tokio::spawn(async move {
            // TODO: –†–µ–∞–ª–∏–∑–∞—Ü–∏—è –ø–æ—Ç–æ–∫–æ–≤–æ–π –æ–±—Ä–∞–±–æ—Ç–∫–∏
            // 1. –†–∞–∑–±–∏–µ–Ω–∏–µ –Ω–∞ —á–∞–Ω–∫–∏
            // 2. –û–±—Ä–∞–±–æ—Ç–∫–∞ –∫–∞–∂–¥–æ–≥–æ —á–∞–Ω–∫–∞
            // 3. –û—Ç–ø—Ä–∞–≤–∫–∞ –ø—Ä–æ–º–µ–∂—É—Ç–æ—á–Ω—ã—Ö —Ä–µ–∑—É–ª—å—Ç–∞—Ç–æ–≤
            
            if let Err(e) = tx.send(Err(Status::unimplemented(
                "–ü–æ—Ç–æ–∫–æ–≤–∞—è –æ–±—Ä–∞–±–æ—Ç–∫–∞ –±—É–¥–µ—Ç —Ä–µ–∞–ª–∏–∑–æ–≤–∞–Ω–∞ –≤ —Å–ª–µ–¥—É—é—â–µ–π –≤–µ—Ä—Å–∏–∏"
            ))).await {
                error!("–û—à–∏–±–∫–∞ –æ—Ç–ø—Ä–∞–≤–∫–∏ –ø–æ—Ç–æ–∫–æ–≤–æ–≥–æ –æ—Ç–≤–µ—Ç–∞: {}", e);
            }
        });
        
        Ok(Response::new(ReceiverStream::new(rx)))
    }
    
    /// –ü—Ä–æ–≤–µ—Ä–∫–∞ —Å–æ—Å—Ç–æ—è–Ω–∏—è —Å–µ—Ä–≤–∏—Å–∞
    #[instrument(skip(self, _request))]
    async fn get_health(
        &self,
        _request: Request<HealthRequest>,
    ) -> Result<Response<HealthResponse>, Status> {
        // –ü—Ä–æ–≤–µ—Ä–∫–∞ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è –∫ Neo4j
        let neo4j_healthy = self.neo4j_client.health_check().await.is_ok();
        
        // –ü—Ä–æ–≤–µ—Ä–∫–∞ —Å–∏—Å—Ç–µ–º–Ω—ã—Ö —Ä–µ—Å—É—Ä—Å–æ–≤
        let system_metrics = self.get_system_metrics().await;
        let memory_ok = system_metrics.memory_usage_bytes < (system_metrics.memory_available_bytes * 9 / 10);
        
        let status = if neo4j_healthy && memory_ok {
            crate::generated::health_response::ServingStatus::Serving
        } else {
            crate::generated::health_response::ServingStatus::NotServing
        };
        
        let message = match status {
            crate::generated::health_response::ServingStatus::Serving => {
                "–°–µ—Ä–≤–∏—Å —Ä–∞–±–æ—Ç–∞–µ—Ç –Ω–æ—Ä–º–∞–ª—å–Ω–æ".to_string()
            }
            _ => {
                format!(
                    "–ü—Ä–æ–±–ª–µ–º—ã: Neo4j={}, Memory={}",
                    neo4j_healthy, memory_ok
                )
            }
        };
        
        Ok(Response::new(HealthResponse {
            status: status as i32,
            message,
            system_metrics: Some(system_metrics),
        }))
    }
    
    /// –ü–æ–ª—É—á–µ–Ω–∏–µ –º–µ—Ç—Ä–∏–∫ –ø—Ä–æ–∏–∑–≤–æ–¥–∏—Ç–µ–ª—å–Ω–æ—Å—Ç–∏
    #[instrument(skip(self, _request))]
    async fn get_metrics(
        &self,
        _request: Request<MetricsRequest>,
    ) -> Result<Response<MetricsResponse>, Status> {
        let metrics = self.metrics.get_prometheus_metrics().await;
        let timestamp = SystemTime::now()
            .duration_since(UNIX_EPOCH)
            .unwrap_or_default()
            .as_secs() as i64;
        
        Ok(Response::new(MetricsResponse {
            metrics,
            collection_timestamp: timestamp,
        }))
    }
}

// –†–µ–∞–ª–∏–∑–∞—Ü–∏—è Clone –¥–ª—è GraphLayoutServer (–¥–ª—è –ø–æ—Ç–æ–∫–æ–≤–æ–π –æ–±—Ä–∞–±–æ—Ç–∫–∏)
impl Clone for GraphLayoutServer {
    fn clone(&self) -> Self {
        Self {
            config: self.config.clone(),
            layout_engine: Arc::clone(&self.layout_engine),
            neo4j_client: Arc::clone(&self.neo4j_client),
            metrics: Arc::clone(&self.metrics),
            server_id: self.server_id.clone(),
            startup_time: self.startup_time,
        }
    }
}
